<resources>
    <string name="app_name">Plot Along</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="pass_phrase">Pass Phrase</string>
    <string name="submit">Submit</string>

    <string name="serverIsDown">Please check internet connection or server may down !</string>
    <string name="network_not_available">Network not available.</string>
    <string name="storage_permission_denied">Storage Permission denied. You may change permission from settings</string>
    <string name="location_permission_denied">Location Permission denied. You may change permission from settings</string>
    <string name="search_customer">Search Customer</string>
    <string name="customer_name">Customer Name</string>
    <string name="project_name">Select a Customer</string>
    <string name="description">Select a customer to start session.</string>
    <string name="btn_customer">Customer</string>
    <string name="login_id">Login Id</string>
    <string name="login_password">Login Password</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_select_customer">Please Select at least one customer</string>
    <string name="storage_not_available">Storage Not Available</string>
    <string name="sure_end_customer_session">Do you want to end all current sessions ?</string>
    <string name="username">username</string>
    <string name="email_id">Email Id</string>

    <string name="title_activity_feedback">Feedback</string>
    <string name="please_fill_feedback_first">Please add feedback first.</string>
    <string name="please_close_customer_session">Please close session of all customer first.</string>
    <string name="plot_number">Plot Number</string>
    <string name="title_activity_customer">Customer</string>
    <string name="option_name">Option Name</string>
    <string name="change_user">Change User</string>
    <string name="enter_email">Enter email</string>
    <string name="menu">Menu</string>
    <string name="project">Project :</string>
    <string name="project_no">Project No</string>
    <string name="frontage">Frontage</string>
    <string name="area">Area</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="session_type">Session Type</string>
    <string name="feedback_type">Feedback Summary</string>
    <string name="customer_name_key">Customer Name :</string>
    <string name="mobile">Mobile</string>
    <string name="sales_person">Sales Person</string>
    <string name="email_id_key">Email Id :</string>
    <string name="mobile_key">Mobile :</string>
    <string name="sales_person_key">Sales Person :</string>
    <string name="project_name_key">Project Name :</string>
    <string name="date_key">Date :</string>
    <string name="time_key">Time :</string>
    <string name="location_key">Location :</string>
    <string name="plot_size">Plot Size</string>
    <string name="plot_status">Plot Status</string>
    <string name="plot_name">Plot Name</string>
    <string name="save_close"><![CDATA[Save & Close]]></string>
    <string name="audio_feedback">Audio Feedback</string>
    <string name="video_feedback">Video Feedback</string>
    <string name="text_feedback">Text Feedback</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="_0">0</string>
    <string name="next">Next</string>
    <string name="questions">Questions</string>
    <string name="start">Start</string>
    <string name="add_to_proposal">Add To Proposal</string>
    <string name="proposal_name_key">Proposal:</string>
    <string name="proposal_name_value">0</string>
    <string name="trace">Trace</string>
    <string name="layer">Layer</string>
    <string name="nearby">Nearby</string>
    <string name="routes">Routes</string>

    <!--PLOT STATUSES-->
    <string name="AVAILABLE">a</string>
    <string name="LIKED">n</string>
    <string name="BOOKED">b</string>
    <string name="RESERVED">r</string>
    <string name="SOLD">s</string>
</resources>
