<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewCustomerListForAddPlot"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="2dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/textViewPlotNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/plot_number"
            android:textColor="@color/black"
            android:textSize="@dimen/text_view_size" />

        <TextView
            android:id="@+id/textViewPlotSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/plot_size"
            android:textColor="@color/black"
            android:textSize="@dimen/text_view_size" />

        <TextView
            android:id="@+id/textViewPlotStatus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/plot_status"
            android:textColor="@color/black"
            android:textSize="@dimen/text_view_size" />
    </LinearLayout>
</android.support.v7.widget.CardView>