<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginModel"
            type="com.plotalong.android.model.loginModel.LoginModel" />

        <variable
            name="login"
            type="com.plotalong.android.activity.MainActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:paddingLeft="80dp"
            android:paddingRight="50dp"
            android:paddingTop="100dp">

            <EditText
                android:id="@+id/editTextLoginId"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/login_id"
                android:inputType="textEmailAddress"
                android:text="@={loginModel.loginId}"
                android:textColor="@color/black"
                android:textSize="@dimen/edit_text_size" />

            <EditText
                android:id="@+id/editTextLoginPassword"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:text="@={loginModel.loginPassword}"
                android:textColor="@color/black"
                android:textSize="@dimen/edit_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/loginButtonCancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:onClick="@{() -> login.onCancelClick()}"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size" />

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:onClick="@{() -> login.onLoginClick()}"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:onClick="@{() -> login.onChangeUserClick()}"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/change_user"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_view_size" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:onClick="@{() -> login.initiateForgotPasswordDialog()}"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_view_size" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <android.support.v4.widget.NestedScrollView
                    android:id="@+id/bottomSheetUserLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:clipToPadding="true"
                    android:paddingLeft="50dp"
                    android:paddingRight="100dp"
                    android:paddingTop="50dp"
                    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/white"
                            android:padding="16dp"
                            android:text="Login"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_view_size" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/white"
                            android:padding="16dp"
                            android:text="Enter username and password to continue."
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_view_size" />
                    </LinearLayout>
                </android.support.v4.widget.NestedScrollView>
            </android.support.design.widget.CoordinatorLayout>
        </LinearLayout>
    </LinearLayout>
</layout>