<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:weightSum="2">

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/date_key"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_view_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewFeedbackDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.5"
                    android:gravity="center_vertical"
                    android:padding="4dp"
                    android:text="@string/date_key"
                    android:textColor="@color/text_view_show_color"
                    android:textSize="@dimen/text_view_size_head" />
            </LinearLayout>

            <!-- <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:orientation="horizontal"
                 android:weightSum="2">

                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="0.5"
                     android:gravity="center_vertical"
                     android:padding="5dp"
                     android:text="@string/time_key"
                     android:textColor="@color/black"
                     android:textSize="@dimen/text_view_size"
                     android:textStyle="bold" />

                 <TextView
                     android:id="@+id/textViewFeedbackCustomerTime"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1.5"
                     android:gravity="center_vertical"
                     android:padding="4dp"
                     android:text="@string/time_key"
                     android:textColor="@color/text_view_show_color"
                     android:textSize="@dimen/text_view_size_head" />
             </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/location_key"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_view_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewFeedbackLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.5"
                    android:gravity="center_vertical"
                    android:padding="4dp"
                    android:text="@string/location_key"
                    android:textColor="@color/text_view_show_color"
                    android:textSize="@dimen/text_view_size_head" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/divider"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/plot_name"
            android:textColor="@color/text_view_show_color"
            android:textSize="@dimen/text_view_size_head" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/plot_size"
            android:textColor="@color/text_view_show_color"
            android:textSize="@dimen/text_view_size_head" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/plot_status"
            android:textColor="@color/text_view_show_color"
            android:textSize="@dimen/text_view_size_head" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewFeedbackPlotLikes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_weight="0.8">

        <Button
            android:id="@+id/buttonAddToProposal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ripple_effect"
            android:padding="5dp"
            android:text="@string/add_to_proposal"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>
</LinearLayout>