<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="294dp"
        android:layout_height="192dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_mic_black_24dp" />

    <ProgressBar
        android:id="@+id/progressBarForAudio"
        style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:maxWidth="10dp"
        android:progressBackgroundTint="@color/accent"
        android:progressTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/imageButtonStartAudioRecording"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect"
            android:text="Start"
            android:textColor="@color/white"
            app:srcCompat="@drawable/ic_play_arrow_black_24dp"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="382dp" />

        <Button
            android:id="@+id/imageButtonStopAudioRecording"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect"
            android:text="@string/stop"
            android:textColor="@color/white"
            app:srcCompat="@drawable/ic_pause_black_24dp"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="382dp" />

        <Button
            android:id="@+id/imageButtonStopPlayRecord"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect"
            android:text="@string/stop"
            android:textColor="@color/white"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_pause_black_24dp"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="382dp" />

        <Button
            android:id="@+id/imageButtonPlayAudioRecording"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect"
            android:text="@string/play"
            android:textColor="@color/white"
            app:srcCompat="@drawable/ic_play_arrow_black_24dp"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="382dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/text_view_show_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBarForAudio"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonAudioNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ripple_effect"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCounter" />

</android.support.constraint.ConstraintLayout>